// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`paragraph snapshots Paragraph: 0 1`] = `
<p
  className="typography_7-0-1-10 paragraph_3-0-1-3"
>
  Paragraph test string
</p>
`;

exports[`paragraph snapshots Paragraph: 1 1`] = `
<p
  className="typography_5-0-1-20 paragraph_1-0-1-13"
  data-sketch-symbol="Paragraph 1"
>
  Paragraph test string
</p>
`;

exports[`paragraph snapshots Paragraph: 2 1`] = `
<p
  className="typography_6-0-1-33 paragraph_2-0-1-26"
  data-sketch-symbol="Paragraph 2"
>
  Paragraph test string
</p>
`;

exports[`paragraph snapshots Paragraph: 3 1`] = `
<p
  className="typography_7-0-1-46 paragraph_3-0-1-39"
  data-sketch-symbol="Paragraph 3"
>
  Paragraph test string
</p>
`;
